--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,53 @@
+permalink: /:title/
 # Site settings
 title: BananPAJ
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+email: adam@bananpaj.se
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://bananpaj.se" # the base hostname & protocol for your site
 twitter_username: tradfursten
-github_username:  jekyll
+github_username:  tradfursten
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+
+redcarpet:
+  extensions: ['smart', 'superscript']
+
+gems:
+  - jekyll-redirect-from
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      lang: en
+      layout: default
+  -
+    scope:
+      path: _posts/sv
+    values:
+      lang: sv
+  -
+    scope:
+      path: _posts/sv/pages
+    values:
+      type: pages
+      desc: "Bananpajs sida"
+  -
+    scope:
+      path: _posts/en/pages
+    values:
+      type: pages
+      desc: "Banana pie page"
+
+  -
+    scope:
+      path: _posts/sv/projects
+    values:
+      type: projects
+  -
+    scope:
+      path: _posts/en/projects
+    values:
+      type: projects
